# envoic

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.agents/skills/: envoic
.claude-plugin/: marketplace.json  plugin.json
.cursor/rules/: envoic.mdc
.github/: copilot-instructions.md
.github/workflows/: docs.yml  js.yml  publish-js.yml  publish.yml  python.yml  skills.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/guide/: configuration.md  getting-started.md  js-getting-started.md  js-managing.md  js-scanning.md  managing.md  reports.md  scanning.md  what-is-envoic.md
docs/reference/: commands.md  detection.md  js-commands.md  js-detection.md  js-output-formats.md  output-formats.md
scripts/: sync-agent-instructions.py  validate-skill.py
skills/envoic/templates/: claude-plugin.json  claude-plugins.yaml  copilot-repo.instructions.md  cursor.cursorrules
src/envoic/: __init__.py  artifacts.py  cli.py  detector.py  manager.py  models.py  report.py  scanner.py  utils.py
tests/: test_artifacts.py  test_detector.py  test_manager.py  test_report.py  test_scanner.py
