[project]
name = "envoic"
version = "0.0.2"
description = "Swiss knife to manage your python environments and node modules"
readme = "README.md"
authors = [
    { name = "Mahimai Raja J", email = "hello@mahimai.dev" }
]
keywords = ["python", "node", "environment", "modules"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/mahimailabs/envoic"
Documentation = "https://github.com/mahimailabs/envoic#readme"
Repository = "https://github.com/mahimailabs/envoic"
Issues = "https://github.com/mahimailabs/envoic/issues"

[tool.pyright]
typeCheckingMode = "off" # typechecking handled by mypy
