[project]
name = "envoic"
version = "0.0.3"
description = "Discover and report Python virtual environments on your system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mahimai", email = "hello@mahimai.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0.0"]

[project.scripts]
envoic = "envoic.cli:app"

[project.urls]
Homepage = "https://github.com/mahimailabs/envoic"
Repository = "https://github.com/mahimailabs/envoic"
Issues = "https://github.com/mahimailabs/envoic/issues"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pyright]
typeCheckingMode = "off"
