[project]
name = "envoic"
version = "0.0.3"
description = "Discover and report Python virtual environments on your system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mahimai", email = "hello@mahimai.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0.0"]

[project.scripts]
envoic = "envoic.cli:app"

[project.urls]
Homepage = "https://github.com/mahimailabs/envoic"
Repository = "https://github.com/mahimailabs/envoic"
Issues = "https://github.com/mahimailabs/envoic/issues"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.mypy]
# --- UPDATE THIS LINE ---
python_version = "3.11" #  project's minimum Python version
# ------------------------
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Can be helpful initially
